--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,8 @@
             Try the product out for free.
           </h6>
           <form id="form" class="form" action="#">
-            <input class="form__email-input" placeholder="email" type="text">
-            <input class="form__pas-input" placeholder="password" type="text">
+            <input class="form__email-input" placeholder="email" type="email" name="email" >
+            <input class="form__pas-input" placeholder="password" type="password">
             <button class="form__btn-send hover-effect sendbtn">Start free trial</button>
           </form>
         </div>
